--- a/documentation.html
+++ b/documentation.html
@@ -1,8 +1,20 @@
-#Project name
-Movies Web App
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documentation</title>
+</head>
+<body>
+    <h1>Documentation Page</h1>
+    <h2>Movies Web App</h2>
+    <p>
+    The web application will provide users with access to information about different movies, directors, and genres. 
+    Users will be able to sign up, update their personal information, and create a list of their favorite movies.
+    </p>
+    
+</body>
+</html>
 
-#Objective
 
-The first part of this project has the goal of building the server-side component of a “movies” web application. 
-The web application will provide users with access to information about different movies, directors, and genres. 
-Users will be able to sign up, update their personal information, and create a list of their favorite movies.
