--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Movie Web App</title>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1>Welcome</h1>
     <p> Here all what you need to now about your favorite movies!</p>
 </body>
 </html>
